[gd_scene load_steps=12 format=3 uid="uid://dk14a45apvgyf"]

[ext_resource type="Script" path="res://panneau.gd" id="1_ckt2o"]
[ext_resource type="Texture2D" uid="uid://bgrlr5m374drk" path="res://Assets/Bâtiments/panneau.png" id="2_31anm"]
[ext_resource type="AudioStream" uid="uid://d0548sfy1jatg" path="res://Assets/Sounds/moudre.mp3" id="3_jfpei"]
[ext_resource type="Texture2D" uid="uid://ci8djy5v8ei03" path="res://Assets/Cyrielle/interactions_tuto.png" id="4_hxlpo"]
[ext_resource type="FontFile" uid="uid://ccu6jholutsm4" path="res://Assets/Fonts/Chewy-Regular.ttf" id="5_kpkoc"]
[ext_resource type="PackedScene" uid="uid://ljyyhfin2fwg" path="res://Scenes/interact_label.tscn" id="6_2pjcv"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_1hfrl"]
radius = 27.0
height = 96.0

[sub_resource type="Animation" id="Animation_xshtp"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -600)]
}

[sub_resource type="Animation" id="Animation_c6bgu"]
resource_name = "TransIN"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(-0.0333333, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, -600), Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_utt4i"]
resource_name = "TransOUT"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -600)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ril8e"]
_data = {
"RESET": SubResource("Animation_xshtp"),
"TransIN": SubResource("Animation_c6bgu"),
"TransOUT": SubResource("Animation_utt4i")
}

[node name="Panneau" type="Area2D"]
process_mode = 2
script = ExtResource("1_ckt2o")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(49, 49)
texture = ExtResource("2_31anm")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PackedVector2Array(13, 61, 43, 60, 43, 89, 55, 90, 56, 59, 87, 60, 88, 14, 12, 15)

[node name="interractionzone" type="Area2D" parent="CollisionPolygon2D"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="CollisionPolygon2D/interractionzone"]
position = Vector2(49, 82)
rotation = -1.5708
shape = SubResource("CapsuleShape2D_1hfrl")

[node name="InteractPanel" type="CanvasLayer" parent="."]
process_mode = 3
offset = Vector2(0, -600)
transform = Transform2D(1, 0, 0, 1, 0, -600)

[node name="Panel" type="Panel" parent="InteractPanel"]
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.498
anchor_right = 0.5
anchor_bottom = 0.498
offset_left = -497.0
offset_top = -245.704
offset_right = 531.0
offset_bottom = 245.296
grow_horizontal = 2
grow_vertical = 2

[node name="Anim" type="AnimationPlayer" parent="InteractPanel"]
libraries = {
"": SubResource("AnimationLibrary_ril8e")
}
autoplay = "RESET"

[node name="Control" type="Control" parent="InteractPanel"]
layout_mode = 3
anchors_preset = 0
offset_left = 78.0
offset_top = 78.0
offset_right = 1104.0
offset_bottom = 567.0

[node name="close" type="Button" parent="InteractPanel/Control"]
self_modulate = Color(1, 0, 0, 1)
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -46.0
offset_top = 7.0
offset_right = -8.0
offset_bottom = 45.0
grow_horizontal = 0
theme_override_font_sizes/font_size = 21
text = "X"

[node name="grind" type="AudioStreamPlayer" parent="InteractPanel"]
stream = ExtResource("3_jfpei")
volume_db = -25.0

[node name="cercle" type="Sprite2D" parent="InteractPanel"]
position = Vector2(431, 333)
scale = Vector2(0.519444, 0.519444)
texture = ExtResource("4_hxlpo")

[node name="regles" type="Label" parent="InteractPanel"]
offset_left = 777.0
offset_top = 131.0
offset_right = 1096.0
offset_bottom = 357.0
theme_override_fonts/font = ExtResource("5_kpkoc")
theme_override_font_sizes/font_size = 19
text = "Attention tout se détruit et s'émousse ! 
Les outils et bâtiments s'abîment, les taux d'échanges baissent et les coûts de réparation augmentent 
Vous jouerez 3 parties de 5 minutes : gérez vos ressources et essayez d'obtenir le plus de points possible !"
horizontal_alignment = 1
autowrap_mode = 3

[node name="commande" type="Label" parent="InteractPanel"]
offset_left = 772.0
offset_top = 353.0
offset_right = 1096.0
offset_bottom = 584.0
theme_override_fonts/font = ExtResource("5_kpkoc")
theme_override_font_sizes/font_size = 17
text = "Cultivez du blé, transformez-le et vendez la farine pour avoir le plus de points possible !
Déplacement : WASD ou flèches
Utilisation des objets : Espace une fois en main (appuyez sur 1, 2, 3, 4, 5, 6, 7, 8, 9 pour changer d'objet)
Réparer un bâtiment : Prendre le marteau en main et appuyer sur R"
horizontal_alignment = 1
autowrap_mode = 3

[node name="InteractLabel" parent="." instance=ExtResource("6_2pjcv")]
offset_left = -51.0
offset_top = -45.0
offset_right = 148.0
offset_bottom = 12.0
theme_override_fonts/font = ExtResource("5_kpkoc")
theme_override_font_sizes/font_size = 20
text = "Appuyez sur \"Espace\" pour ouvrir le tuto"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[connection signal="body_entered" from="CollisionPolygon2D/interractionzone" to="." method="_on_interractionzone_body_entered"]
[connection signal="body_exited" from="CollisionPolygon2D/interractionzone" to="." method="_on_interractionzone_body_exited"]
[connection signal="pressed" from="InteractPanel/Control/close" to="." method="_on_close_pressed"]
